--- a/TSQLParser/packages.config
+++ b/TSQLParser/packages.config
@@ -1,32 +1,55 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Azure.Core" version="1.16.0" targetFramework="net462" />
-  <package id="Azure.Identity" version="1.3.0" targetFramework="net462" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net462" />
-  <package id="Microsoft.Data.SqlClient" version="3.0.0" targetFramework="net462" />
-  <package id="Microsoft.Data.SqlClient.SNI" version="3.0.0" targetFramework="net462" />
-  <package id="Microsoft.Identity.Client" version="4.33.0" targetFramework="net462" />
-  <package id="Microsoft.Identity.Client.Extensions.Msal" version="2.16.5" targetFramework="net462" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.8.0" targetFramework="net462" />
-  <package id="Microsoft.IdentityModel.Logging" version="6.8.0" targetFramework="net462" />
-  <package id="Microsoft.IdentityModel.Protocols" version="6.8.0" targetFramework="net462" />
-  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.8.0" targetFramework="net462" />
-  <package id="Microsoft.IdentityModel.Tokens" version="6.8.0" targetFramework="net462" />
-  <package id="Microsoft.SqlServer.DacFx" version="160.5400.1" targetFramework="net462" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
-  <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net462" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.6.0" targetFramework="net462" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="6.8.0" targetFramework="net462" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net462" />
-  <package id="System.Memory.Data" version="1.0.2" targetFramework="net462" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net462" />
-  <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net462" />
-  <package id="System.Security.Cryptography.ProtectedData" version="4.5.0" targetFramework="net462" />
-  <package id="System.Security.Permissions" version="4.7.0" targetFramework="net462" />
-  <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net462" />
-  <package id="System.Text.Encodings.Web" version="4.7.2" targetFramework="net462" />
-  <package id="System.Text.Json" version="4.6.0" targetFramework="net462" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net462" />
+  <package id="Azure.Core" version="1.44.1" targetFramework="net462" />
+  <package id="Azure.Identity" version="1.13.1" targetFramework="net462" />
+  <package id="Azure.Storage.Blobs" version="12.23.0" targetFramework="net462" />
+  <package id="Azure.Storage.Common" version="12.22.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights" version="2.22.0" targetFramework="net462" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.0" targetFramework="net462" />
+  <package id="Microsoft.Bcl.HashCode" version="6.0.0" targetFramework="net462" />
+  <package id="Microsoft.Bcl.TimeProvider" version="9.0.0" targetFramework="net462" />
+  <package id="Microsoft.Data.SqlClient" version="5.2.2" targetFramework="net462" />
+  <package id="Microsoft.Data.SqlClient.SNI" version="5.2.0" targetFramework="net462" />
+  <package id="Microsoft.Identity.Client" version="4.66.2" targetFramework="net462" />
+  <package id="Microsoft.Identity.Client.Extensions.Msal" version="4.66.2" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="8.3.0" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="8.3.0" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Logging" version="8.3.0" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Protocols" version="8.3.0" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="8.3.0" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Tokens" version="8.3.0" targetFramework="net462" />
+  <package id="Microsoft.SqlServer.DacFx" version="162.5.57" targetFramework="net462" />
+  <package id="Microsoft.SqlServer.TransactSql.ScriptDom" version="170.3.0" targetFramework="net462" />
+  <package id="Microsoft.SqlServer.Types" version="160.1000.6" targetFramework="net462" />
+  <package id="System.Buffers" version="4.6.0" targetFramework="net462" />
+  <package id="System.ClientModel" version="1.2.1" targetFramework="net462" />
+  <package id="System.Collections.Immutable" version="9.0.0" targetFramework="net462" />
+  <package id="System.Configuration.ConfigurationManager" version="9.0.0" targetFramework="net462" />
+  <package id="System.Diagnostics.DiagnosticSource" version="9.0.0" targetFramework="net462" />
+  <package id="System.Formats.Nrbf" version="9.0.0" targetFramework="net462" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="8.3.0" targetFramework="net462" />
+  <package id="System.IO.FileSystem.AccessControl" version="5.0.0" targetFramework="net462" />
+  <package id="System.IO.Hashing" version="9.0.0" targetFramework="net462" />
+  <package id="System.IO.Pipelines" version="9.0.0" targetFramework="net462" />
+  <package id="System.Memory" version="4.6.0" targetFramework="net462" />
+  <package id="System.Memory.Data" version="9.0.0" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net462" />
+  <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net462" />
+  <package id="System.Reflection.Metadata" version="9.0.0" targetFramework="net462" />
+  <package id="System.Resources.Extensions" version="9.0.0" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net462" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.AccessControl" version="6.0.1" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.ProtectedData" version="9.0.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
+  <package id="System.Security.Permissions" version="9.0.0" targetFramework="net462" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net462" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Text.Encodings.Web" version="9.0.0" targetFramework="net462" />
+  <package id="System.Text.Json" version="9.0.0" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
 </packages>
